--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "exports": {
     ".": {
-      "import": "./dist/signify-ts.mjs",
-      "require": "./dist/signify-ts.cjs",
+      "import": "./dist/qvi-ts.mjs",
+      "require": "./dist/qvi-ts.cjs",
       "types": "./dist/index.d.ts"
     }
   },
@@ -19,8 +19,8 @@
   "packageManager": "yarn@3.6.3",
   "scripts": {
     "start": "npm run build:esm -- --watch",
-    "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/signify-ts.cjs --platform=neutral --format=cjs --sourcemap --packages=external",
-    "build:esm": "esbuild src/index.ts --bundle --outfile=dist/signify-ts.mjs --platform=neutral --format=esm --sourcemap --packages=external",
+    "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/qvi-ts.cjs --platform=neutral --format=cjs --sourcemap --packages=external",
+    "build:esm": "esbuild src/index.ts --bundle --outfile=dist/qvi-ts.mjs --platform=neutral --format=esm --sourcemap --packages=external",
     "build:types": "tsc -p tsconfig.build.json",
     "build": "npm run build:cjs && npm run build:esm && npm run build:types",
     "prepare": "npm run build",
